--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethnum = "1.1.1"
-rayon = "1.5.1"
-hashbrown = "0.12.0"
-once_cell = "1.10.0"
+ethnum = "1.3.2"
+rayon = "1.6.1"
+once_cell = "1.17.1"
+sysinfo = "0.28.1"
