--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethnum = "1.3.2"
-rayon = "1.6.1"
+ethnum = { version = "1.3.2", features = ["serde"] }
+rayon = "1.7.0"
 once_cell = "1.17.1"
-sysinfo = "0.28.1"
+sysinfo = "0.28.2"
+ctrlc = { version = "3.2.5", features = ["termination"] }
+serde = { version = "1.0.155" , features = ["derive"] }
+serde_json = "1.0.94"
